Replaced description with POD files

--- a/README.pod
+++ b/README.pod
@@ -1,5 +1,4 @@
-Catalyst Examples
-=================
+=head1 Catalyst Examples
 
 Here are the complete working examples of Catalyst::Manual::Tutorial
 
@@ -10,4 +9,3 @@ Chapter 4 - Basic CRUD
 Chapter 5 - Authentication 
 
 Chapter 6 - Authorization
-
